# CarConnectivity-plugin-database

./: CHANGELOG.md  README.md  carconnectivity.db  pyproject.toml
.github/workflows/: build.yml  build_and_publish.yml
doc/: Config.md
src/carconnectivity_database/: carconnectivity_database_base.py
src/carconnectivity_plugins/database/: plugin.py
src/carconnectivity_plugins/database/agents/: base_agent.py  charging_agent.py  climatization_agent.py  drive_state_agent.py  refuel_agent.py  state_agent.py  trip_agent.py
src/carconnectivity_plugins/database/model/: __init__.py  alembic.ini  attribute.py  attribute_value.py  base.py  battery_temperature.py  charging_power.py  charging_rate.py  charging_session.py  charging_state.py  charging_station.py  climatization_state.py  connection_state.py  datetime_decorator.py  drive.py  drive_consumption.py  drive_level.py  drive_range.py  drive_range_full.py  location.py  migrations.py  outside_temperature.py  refuel_session.py  state.py  tag.py  timedelta_decorator.py  trip.py  vehicle.py
src/carconnectivity_plugins/database/model/carconnectivity-schema/: env.py
src/carconnectivity_plugins/database/model/carconnectivity_schema/: env.py
src/carconnectivity_plugins/database/ui/: database_edit.py  plugin_ui.py
src/carconnectivity_plugins/database/ui/templates/database/: status.html
src/carconnectivity_plugins/database/ui/templates/database/edit/: overview.html  vehicles.html
test/integration_test/: carConnectivity.json
